// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Path 1 path component 1`] = `
<DocumentFragment>
  <strong>
    a
  </strong>
</DocumentFragment>
`;

exports[`Path 2 path components 1`] = `
<DocumentFragment>
  <span
    class="text-muted"
  >
    a/
  </span>
  <strong>
    b
  </strong>
</DocumentFragment>
`;

exports[`Path 3 path components 1`] = `
<DocumentFragment>
  <span
    class="text-muted"
  >
    a/b/
  </span>
  <strong>
    c
  </strong>
</DocumentFragment>
`;

exports[`Path no path components 1`] = `<DocumentFragment />`;
